# hummingbird

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.playwright-mcp/: page-2026-04-13T08-55-30-823Z.yml  page-2026-04-13T08-55-45-645Z.yml  page-2026-04-13T08-55-58-805Z.yml  page-2026-04-13T08-56-13-502Z.yml
cli/: go.mod  go.sum  main.go
cli/client/: client.go  config.go
cli/tui/: app.go  controls.go  logs.go  overview.go  styles.go  trades.go
listener/: Cargo.toml
listener/src/: config.rs  fetcher.rs  forwarder.rs  listener.rs  main.rs  parser.rs  types.rs
npm/@decatalyst/hummingbird-darwin-x64/: package.json
orchestrator/: go.mod  go.sum  main.go
orchestrator/alerts/: telegram.go
orchestrator/auth/: auth.go
orchestrator/bot/: bot.go  render.go
orchestrator/config/: config.go
orchestrator/cricket/: client.go  types.go
orchestrator/db/: db.go
orchestrator/eventlog/: eventlog.go
orchestrator/models/: models.go
orchestrator/monitor/: monitor.go
orchestrator/pnl/: card.go
orchestrator/portfolio/: portfolio.go
orchestrator/scalper/: scalper.go
orchestrator/trader/: trader.go
orchestrator/userbot/: manager.go
orchestrator/util/: recover.go
scorer/: config.py  main.py  models.py  requirements.txt  rpc.py  scalper.py  scorer.py  store.py  swing.py
scorer/checks/: bonding.py  contract.py  dev_wallet.py  social.py  supply.py
scripts/: build-npm.sh  publish-npm.sh  seed_firefly.py
web/: .env.production  index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
(+29 files in other folders)
